--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Fri Nov 30 19:45:41 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* reload.c (find_reloads): Update the dupplicates after swappingg.
+
 Wed Nov 28 13:51:24 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfgbuild.c (inside_basic_block_p, control_flow_insn_p): Break out from ...
