* Merger from mainline (cfg-merger-20011130 tag).
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47492 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Fri Nov 30 21:42:06 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* Merger from mainline (cfg-merger-20011130 tag).
+
 Fri Nov 30 19:45:41 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* reload.c (find_reloads): Update the dupplicates after swappingg.
