--- a/cfg-branch/gcc/configure.in
+++ b/cfg-branch/gcc/configure.in
@@ -578,7 +578,7 @@ fi
 dnl Disabled until we have a complete test for buggy enum bitfields.
 dnl gcc_AC_C_ENUM_BF_UNSIGNED
 
-AC_CHECK_FUNCS(strtoul bsearch popen times clock \
+AC_CHECK_FUNCS(strtoul bsearch popen times clock dup2 \
 	strchr strrchr kill getrlimit setrlimit atoll atoq \
 	sysconf isascii gettimeofday strsignal putc_unlocked fputc_unlocked \
 	fputs_unlocked fwrite_unlocked fprintf_unlocked getrusage nl_langinfo \
@@ -606,8 +606,6 @@ else
 fi
 AC_SUBST(TARGET_GETGROUPS_T)
 
-gcc_AC_FUNC_VFPRINTF_DOPRNT
-gcc_AC_FUNC_STRSTR
 gcc_AC_FUNC_PRINTF_PTR
 
 case "${host}" in
@@ -838,6 +836,7 @@ fi
 if test x$host = x$build
 then
 	build_auto=auto-host.h
+	FORBUILD=..
 else
 	# We create a subdir, then run autoconf in the subdir.
 	# To prevent recursion we set host and build for the new
@@ -863,7 +862,9 @@ else
 	cd ..
 	rm -rf $tempdir
 	build_auto=auto-build.h
+	FORBUILD=../$build
 fi
+AC_SUBST(FORBUILD)
 
 tm_file="${tm_file} defaults.h"
 host_xm_file="auto-host.h ansidecl.h ${host_xm_file} ${tm_file}"
@@ -2038,7 +2039,7 @@ done
 rm -f Make-hooks
 touch Make-hooks
 target_list="all.build all.cross start.encap rest.encap \
-	info dvi \
+	info dvi generated-manpages \
 	install-normal install-common install-info install-man \
 	uninstall \
 	mostlyclean clean distclean extraclean maintainer-clean \
