--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -578,11 +578,9 @@ fi
 dnl Disabled until we have a complete test for buggy enum bitfields.
 dnl gcc_AC_C_ENUM_BF_UNSIGNED
 
-AC_CHECK_FUNCS(strtoul bsearch popen times clock dup2 \
-	strchr strrchr kill getrlimit setrlimit atoll atoq \
-	sysconf isascii gettimeofday strsignal putc_unlocked fputc_unlocked \
-	fputs_unlocked fwrite_unlocked fprintf_unlocked getrusage nl_langinfo \
-	lstat)
+AC_CHECK_FUNCS(times clock dup2 kill getrlimit setrlimit atoll atoq \
+	sysconf strsignal putc_unlocked fputc_unlocked fputs_unlocked \
+	fwrite_unlocked fprintf_unlocked getrusage nl_langinfo lstat)
 
 AC_CHECK_TYPE(ssize_t, int)
 
