* Makefile.am (nat_files, x_nat_files): Make sure the dependencies 	don't get deleted if compilation fails. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47520 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -1762,8 +1762,9 @@ clean-local:
 	$(GCJCOMPILE) -o $@ $<
 
 $(nat_files) $(x_nat_files): %.lo: %.cc
-	@echo '$(LTCXXCOMPILE) -c -o $@ $<'; \
-	$(LTCXXCOMPILE) -MD -MT $@ -MF $*.d -c -o $@ $<
+	@echo '$(LTCXXCOMPILE) -MD -MT $@ -MF $(@:.lo=.pp) -c -o $@ $<'; \
+	$(LTCXXCOMPILE) -MD -MT $@ -MF $(@:.lo=.pp) -c -o $@ $<
+	@-mv $(@:.lo=.pp) $(@:.lo=.d)
 
 $(c_files): %.lo: %.c
 	$(LTCOMPILE) -c -o $@ $<
