* config/alpha/vms.h (VMS_DEBUGGING_INFO): New macro. 	(PREFERRED_DEBUGGING_TYPE): Define as VMS_AND_DWARF2_DEBUG. 	(ASM_SPEC): Don't redefine. 	(OPTIMIZATION_OPTIONS, OVERRIDE_OPTIONS, LINK_SPEC): Define. 	* config/alpha/t-vms (EXTRA_PARTS): Use; add rule for vms-dwarf2.asm. 	* config/alpha/vms-dwarf2.asm: New file. 	* Makefile.in (OBJS): Add vmsdbgout.c and its rule. 	* c-lex.c (init_c_lex): Test for VMS_AND_DWARF2_DEBUG. 	* debug.h (gcc_debug_hooks): Add vmsdbg_debug_hooks. 	(vmsdbgout_after_prologue): New declaration. 	* defaults.h (VMS_DEBUGGING_INFO): Add to PREFERRED_DEBUGGING_TYPE. 	* dwarf2.h (dwarf_attribute): New DW_AT_VMS_rtnbeg_pd_address. 	* dwarf2out.c (dwarf2out_do_frame): Test for VMS_AND_DWARF2_DEBUG. 	(dwarf2out_frame_finish): Test for VMS_AND_DWARF2_DEBUG. 	(dwarf_attr_name): Use DW_AT_VMS_rtnbeg_pd_address. 	(add_name_and_src_coords_attributes): Test VMS_DEBUGGING_INFO 	* final.c (final_start_function): Test for VMS_AND_DWARF2_DEBUG. 	Test VMS_DEBUGGING_INFO. 	(final_end_function): Test for VMS_AND_DWARF2_DEBUG. 	(final_scan_insn): Test for VMS_AND_DWARF2_DEBUG and VMS_DEBUG. 	* flags.h (debug_info_type): Add VMS_DEBUG and VMS_AND_DWARF2_DEBUG. 	* toplev.c (compile_file): Test VMS_DEBUGGING_INFO, VMS_DEBUG, and 	VMS_AND_DWARF2_DEBUG. 	(rest_of_type_compilation): Test for VMS_AND_DWARF2_DEBUG. 	(decode_g_option): Add "vms" to debug_type_names. 	(process_options): Set vmsdbg_debug_hooks if -gvms. 	(lang_independent_init): Emit line number for VMS unless -g0. 	* tree.c: (build_complex_type): Test for VMS_AND_DWARF2_DEBUG. 	* vmsdbg.h, vmsdbgout.c: New files.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47532 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -728,7 +728,7 @@ OBJS = alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	\
  sbitmap.o sched-deps.o sched-ebb.o sched-rgn.o sched-vis.o sdbout.o	\
  sibcall.o simplify-rtx.o ssa.o ssa-ccp.o ssa-dce.o stmt.o	\
  stor-layout.o stringpool.o timevar.o toplev.o tree.o tree-dump.o 	\
- tree-inline.o unroll.o varasm.o varray.o version.o xcoffout.o 		\
+ tree-inline.o unroll.o varasm.o varray.o version.o vmsdbgout.o xcoffout.o \
  $(GGC) $(out_object_file) $(EXTRA_OBJS)
 
 BACKEND = main.o libbackend.a
@@ -1395,6 +1395,8 @@ dwarf2out.o : dwarf2out.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) dwarf2.h \
    $(GGC_H) except.h dwarf2asm.h $(TM_P_H) langhooks.h
 dwarf2asm.o : dwarf2asm.c $(CONFIG_H) $(SYSTEM_H) flags.h $(RTL_H) $(TREE_H) \
    output.h dwarf2asm.h $(TM_P_H)
+vmsdbgout.o : vmsdbgout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) flags.h \
+   output.h vmsdbg.h debug.h langhooks.h
 xcoffout.o : xcoffout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) xcoffout.h \
    flags.h toplev.h output.h dbxout.h $(GGC_H)
 emit-rtl.o : emit-rtl.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
