--- a/libf2c/libU77/Makefile.in
+++ b/libf2c/libU77/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for GNU F77 compiler runtime, libc interface.
-# Copyright (C) 1995-1998 Free Software Foundation, Inc.
+# Copyright (C) 1995-1998, 2001 Free Software Foundation, Inc.
 #   Contributed by Dave Love (d.love@dl.ac.uk).
 #
 #This file is part of the GNU Fortran libU77 library.
@@ -55,8 +55,6 @@ G77DIR = ../../../gcc/
 .c.lo:
 	@LIBTOOL@ --mode=compile $(CC) -c -DSkip_f2c_Undefs $(ALL_CFLAGS) $<
 
-LINK = @LIBTOOL@ --mode=link $(CC) -o $@
-
 OBJS =  VersionU.lo gerror_.lo perror_.lo ierrno_.lo itime_.lo time_.lo \
 	unlink_.lo fnum_.lo getpid_.lo getuid_.lo getgid_.lo kill_.lo rand_.lo \
 	srand_.lo irand_.lo sleep_.lo idate_.lo ctime_.lo etime_.lo \
@@ -78,10 +76,13 @@ SRCS =  Version.c gerror_.c perror_.c ierrno_.c itime_.c time_.c \
 	umask_.c sys_clock_.c date_.c second_.c flush1_.c mclock_.c \
 	alarm_.c datetime_.c
 
-all: ../libU77.la
+all: ../s-libu77
 
-../libU77.la: $(OBJS)
-	$(LINK) $(OBJS)
+../s-libu77: $(OBJS)
+	-rm -f $@.T $@
+	objs='$(OBJS)'; for name in $$objs; do \
+	  echo libU77/$${name} >> $@.T; done
+	mv $@.T $@
 
 Makefile: Makefile.in config.status
 	$(SHELL) config.status
@@ -178,11 +179,11 @@ mostlyclean:
 	rm -rf .libs
 
 clean: mostlyclean
-	rm -f config.log ../libU77.la
+	rm -f config.log ../s-libu77
 
 distclean: clean
 	rm -f config.cache config.status Makefile config.h stamp.h \
-	  ../libU77.la configure
+	  ../s-libu77 configure
 
 maintainer-clean:
 
