* Makefile.in ($(LIBG2C)): Fix -rpath argument to libtool.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47606 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/Makefile.in
+++ b/libf2c/Makefile.in
@@ -142,7 +142,7 @@ i77 f77 u77: g2c.h
 $(LIBG2C): s-libi77 s-libf77 s-libu77 s-libe77
 	$(LIBTOOL) --mode=link $(CC) -o $@ \
 	  -version-info $(VERSION_MAJOR):$(VERSION_MINOR):$(VERSION_SUB) \
-	  -rpath $(prefix)/lib \
+	  -rpath $(libsubdir)/$(MULTISUBDIR) \
 	  -objectlist s-libe77 \
 	  -objectlist s-libf77 \
 	  -objectlist s-libi77 \
